Closed
Bug 1236654
Opened 10 years ago
Closed 10 years ago
Fix GLController shutdown
Categories
(Core Graveyard :: Widget: Android, defect)
Tracking
(firefox46 fixed)
RESOLVED
FIXED
mozilla46
| Tracking | Status | |
|---|---|---|
| firefox46 | --- | fixed |
People
(Reporter: jchen, Assigned: jchen)
References
Details
Attachments
(1 file)
|
4.84 KB,
patch
|
snorp
:
review+
|
Details | Diff | Splinter Review |
GLController doesn't shut down properly right now on nsWindow closing, which can lead to crashes.
| Assignee | ||
Comment 1•10 years ago
|
||
When nsWindow closes, notify GLController to shut down. To ensure any
pending calls on the UI thread are processed first, post a Runnable to
the UI thread that disposes the GLController on the UI thread.
Attachment #8703861 -
Flags: review?(snorp)
Updated•10 years ago
|
Attachment #8703861 -
Flags: review?(snorp) → review+
Comment 3•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•