Bug 1236654 - Properly shut down GLController on nsWindow closing; r=snorp When nsWindow closes, notify GLController to shut down. To ensure any pending calls on the UI thread are processed first, post a Runnable to the UI thread that disposes the GLController on the UI thread.